--- a/src/static/css/User_Adoption_Center/post/animal_information.css
+++ b/src/static/css/User_Adoption_Center/post/animal_information.css
@@ -101,7 +101,7 @@ body{
 
 /* OPERATIONS */
 
-.container_animal_operation{
+.container_animal_operation, .container_animal_disease{
   border: #138e8e solid;
   width: 100%;
   height: 100%;
