--- a/src/templates/User_Adoption_Center/post/animal_information.html
+++ b/src/templates/User_Adoption_Center/post/animal_information.html
@@ -78,7 +78,7 @@
       </div>
       <div class="container_animal_seccion">
         {%if operations%}
-          <select class="form-select" aria-label="Default select example" id="operations_select" onchange="updateSelection('operations_select','operations_added')">
+          <select class="form-select" aria-label="Default select example" id="operations_select" onchange="updateSelection('operations_select','operations_added', 'operation')">
             <option selected disabled>operaciones ...</option>
             {%for operation in operations%}
             <option value="{{operation.id}}">{{operation.name}}</option>
@@ -88,19 +88,9 @@
       </div>
       <div class="container_options_added input" id="operations_added">
 
-      </div>
-<!-- Falta terminarlo -->
-      {%if operations_animal%}
-      <div class="container_operations_animal input">
-        {%for operation_animal in operations_animal%}
-        <div class="input">
-          <input type="text" class="form-control" placeholder="Nombre" aria-label="" name="animal_name">
-        </div>
-        {%endfor%}
-      </div>
-      {%endif%}
-      
+      </div>      
     </div>
+
     <!-- Enfermedades del animal -->
     <div class="container_animal_disease">
       <div class="container_title_seccion">
@@ -108,7 +98,7 @@
       </div>
       <div class="container_animal_seccion">
         {%if diseases%}
-          <select class="form-select" aria-label="Default select example" id="disease_select" onchange="updateSelection('disease_select','disease_added')">
+          <select class="form-select" aria-label="Default select example" id="disease_select" onchange="updateSelection('disease_select','disease_added', 'disease')">
             <option selected disabled>Enfermedades ...</option>
             {%for disease in diseases%}
             <option value="{{disease.id}}">{{disease.name}}</option>
@@ -119,17 +109,26 @@
       <div class="container_options_added input" id="disease_added">
 
       </div>
-      <!-- Falta por terminar -->
-      {%if diseases_animal%}
-      <div class="container_operations_animal input">
-        {%for disease_animal in diseases_animal%}
-        <div class="input">
-          <input type="text" class="form-control" placeholder="Nombre" aria-label="" name="animal_name">
-        </div>
-        {%endfor%}
+    </div>
+
+    <!-- Vacunas del animal -->
+    <div class="container_animal_vaccine">
+      <div class="container_title_seccion">
+        <h1>Vacunas aplicadas</h1>
       </div>
-      {%endif%}
-      
+      <div class="container_animal_seccion">
+        {%if vaccines%}
+          <select class="form-select" aria-label="Default select example" id="vaccine_select" onchange="updateSelection('vaccine_select','vaccine_added', 'vaccine')">
+            <option selected disabled>Vacunas ...</option>
+            {%for vaccine in vaccines%}
+            <option value="{{vaccine.id}}">{{vaccine.name}}</option>
+            {%endfor%}
+          </select>
+        {%endif%}
+      </div>
+      <div class="container_options_added input" id="vaccine_added">
+
+      </div>
     </div>
 
 
