--- a/src/templates/User_Adoption_Center/modal.html
+++ b/src/templates/User_Adoption_Center/modal.html
@@ -91,17 +91,18 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="modaltitle3">EDITAR INFORMACION</h1>
+        <h1 class="modal-title fs-5" id="modaltitle3">INFORMACION RÁPIDA</h1>
         <!-- <input class="modal-title fs-5" id="modaltitle3" name="nombre"> -->
       </div>
       <form action='/view/animals' method="POST">
         <div class="modal-body input-group">
           <div class="container">
             <div class="row">
-              <div class="col col-md-auto">
+              <div class="col col-md-auto" style="display: grid; grid-template-columns: min-content;">
                 <input type="hidden" name="form_id" value="edit_animal"><!--IDENTIFICADOR FORM-->
                 <input type="hidden" id="idAnimal" name="animalid">
                 <img id="animal_photo" src="" alt="" style="width: 400px; height: 400px;">
+                <a href="/editAnimal/" id="ref_edit_animal">Editar información completa</a>
               </div>
               <div class="col col-md-6">
                 <div class="input-group mb-3">
@@ -138,10 +139,10 @@
                 </div>
                 <div class="input-group mb-3">
                   <span class="input-group-text">Estado</span>
-                  <select class="form-select editAnimal" aria-label="Filtrar por tema" name="estadoEdit" id = "estado" style="cursor: pointer;">
+                  <select class="form-select editAnimal" aria-label="Filtrar por tema" name="animal_is_adopted" id = "estado" style="cursor: pointer;">
                     <option disabled selected>Pulsa para cambiar estado ...</option>
-                    <option value="0">Adoptado</option>
-                    <option value="1">No adoptado</option>
+                    <option value='1'>Adoptado</option>
+                    <option value='0'>No adoptado</option>
                     
                   </select>
                   <!-- <input type="number" id="pesoEdit" class="form-control editAnimal" placeholder="Peso" aria-label="Peso (kg)" name="pesoEdit"> -->
