--- a/src/static/css/User_Adoption_Center/post/upload_animal.css
+++ b/src/static/css/User_Adoption_Center/post/upload_animal.css
@@ -73,6 +73,13 @@ body{
   border: purple solid;
   margin: 1% 1% 0 1%;
 }
+.input label{
+  font-family: 'Jua', sans-serif;
+  font-size: medium;
+  border: purple solid;
+
+  margin-right: 1%;
+}
 
 .btn-personalized {
   background-color: #1cb0ad; 
