--- a/src/templates/User_Adoption_Center/post/upload_animal.html
+++ b/src/templates/User_Adoption_Center/post/upload_animal.html
@@ -1,7 +1,7 @@
 {% extends 'lateral_base.html' %}
 
 {% block title %}
-{{title}}
+Nuevo animal
 {% endblock %}
 
 {% block customCSS%}
@@ -77,7 +77,7 @@
         <h1>Dieta del animal</h1>
         <p>Agrega en esta sección los alimentos que, estrictamente <strong>debe o no</strong> comer el animal</p>
       </div>
-      <div class="input">
+      <div class="input_diet">
         <textarea class="form-control" name="animal_diet" rows="4" placeholder="Agrega aquí observaciones importantes ..."></textarea>
       </div>
     </div>
