--- a/src/static/css/User_Adoption_Center/post/edit_animal.css
+++ b/src/static/css/User_Adoption_Center/post/edit_animal.css
@@ -25,7 +25,7 @@ body{
   grid-template-columns: 35% 65%;
   grid-template-rows: min-content min-content min-content;
   margin-bottom: 2%;
-  /* border: orangered solid; */
+  /* border: yellow solid; */
 }
 
 .container_animal_photo{
@@ -72,7 +72,8 @@ body{
 }
 
 .input{
-  display: flex;
+  display: grid;
+  grid-template-columns: 10% 90%;
   /* border: purple solid; */
   margin: 1% 1% 0 1%;
 }
@@ -83,7 +84,6 @@ body{
 
   margin-right: 1%;
 }
-
 /* BOTON DE GUARDAR CAMBIOS */
 .btn-personalized {
   background-color: #1cb0ad; 
@@ -133,6 +133,7 @@ body{
 /* OPERATIONS, DIASEASES AND VACCINES */
 
 .container_animal_operation, .container_animal_disease, .container_animal_vaccine{
+  /* border: #138e8e solid; */
   border-top: #138e8e dashed 2px;
   margin-bottom: 2%;
   width: 100%;
@@ -146,7 +147,7 @@ body{
   border: #1cb0ad solid 1px;
 }
 
-.container_options_added{
+.container_options_added,.container_options_register{
   /* border: solid; */
   display: flex;
   flex-direction: column;
@@ -160,6 +161,7 @@ body{
   width: 100%;
   height: 100%;
 }
+
 
 .option_added button {
   width: min-content;
@@ -183,6 +185,7 @@ body{
   color: #147071;
   cursor: not-allowed;
 }
+
 
 .option_added label{
   width: 100%;
