Commit_052: Agregado template, css, js, endpoint de realizar publicacion

--- a/src/templates/lateral_base.html
+++ b/src/templates/lateral_base.html
@@ -55,7 +55,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="#"
+              <a href="/publication_adoption_center"
                 class="link flex">
                 <i class="bx bxs-cloud-upload"></i>
                 <span>Publicar</span>
