--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -77,7 +77,7 @@
         </a>
       </div>
       <div class="col col-md-4 d-grid gap-2">
-        <a class="btn btn-personalized" href="/home/community">
+        <a class="btn btn-personalized" href="#">
           <i class='bx bxs-book-heart'></i> Comunidad
         </a>
       </div>
