Commit_054: Agregado requirements.txt

--- a/src/templates/User_Adoption_Center/profile_adoption_center.html
+++ b/src/templates/User_Adoption_Center/profile_adoption_center.html
@@ -70,7 +70,7 @@ Perfil
               {%if user_information.googlemaps%}
               <div class="infocampo">
                 <label>Ver en Google Maps: </label>
-                <a href="{{user_information.googlemaps}}" target="_blank">{{user_information.googlemaps}}</a>
+                <a href="{{user_information.googlemaps}}" target="_blank">Ver en el mapa</a>
                 
               </div>
               {%endif%}
