Commit_055: Agregada texto de Base de datos

--- a/src/templates/User_Adoption_Center/post/animals.html
+++ b/src/templates/User_Adoption_Center/post/animals.html
@@ -166,7 +166,7 @@
               data-animal_breed_name="{{animal.breed_name}}"
               data-animal_size="{{animal.size}}"
               data-animal_weight="{{animal.weight}}"
-              data-animal_diet="{{animal.diet}}">
+              data-animal_observation="{{animal.observation}}">
               <i class='bx bx-book-open'></i> Abrir
             </button>
           </div>
@@ -201,7 +201,7 @@
               data-animal_breed_name="{{animal.breed_name}}"
               data-animal_size="{{animal.size}}"
               data-animal_weight="{{animal.weight}}"
-              data-animal_diet="{{animal.diet}}">
+              data-animal_observation="{{animal.observation}}">
               <i class='bx bx-book-open'></i> Abrir
             </button>
           </div>
