--- a/src/templates/User_Adoption_Center/post/edit_animal.html
+++ b/src/templates/User_Adoption_Center/post/edit_animal.html
@@ -93,14 +93,14 @@ Editar animal
       </div>
     </div>
     <!-- Dieta del animal -->
-    <div class="container_animal_diet">
+    <div class="container_animal_observation">
       <div class="container_title_seccion">
-        <h1>Dieta del animal</h1>
+        <h1>Observaciones del animal</h1>
         <p>Agrega en esta sección los alimentos que, estrictamente <strong>debe o no</strong> comer el animal</p>
       </div>
-      <div class="input_diet">
-        <textarea class="form-control" name="animal_diet" rows="4"
-          placeholder="Agrega aquí observaciones importantes ...">{{animal.diet}}</textarea>
+      <div class="input_observation">
+        <textarea class="form-control" name="animal_observation" rows="4"
+          placeholder="Agrega aquí observaciones importantes ...">{{animal.observation}}</textarea>
       </div>
     </div>
     <!-- Operaciones del animal -->
