--- a/src/static/css/User_Adoption_Center/post/edit_animal.css
+++ b/src/static/css/User_Adoption_Center/post/edit_animal.css
@@ -113,20 +113,20 @@ body{
 
 
 /* SECCION DIETA DEL ANIMAL */
-.container_animal_diet{
+.container_animal_observation{
   /* border: magenta solid; */
   border-top: #138e8e dashed 2px;
   width: 100%;
   height: 100%;
 }
 
-.input_diet{
+.input_observation{
   /* border: orange solid; */
   margin: 1%;
   width: 98%;
 }
 
-.input_diet textarea{
+.input_observation textarea{
   border: #1cb0ad solid 1px;
 }
 
