--- a/src/templates/publication.html
+++ b/src/templates/publication.html
@@ -2,7 +2,7 @@
 
 {% block customCSS%}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{{url_for('static', filename = 'css/User_Adoption_Center/post/publication_adoption_center.css')}}">
+<link rel="stylesheet" href="{{url_for('static', filename = 'css/publication.css')}}">
 {% endblock %}
 
 
@@ -90,5 +90,5 @@
 {% endblock %}
 
 {% block customJS%}
-<script src="/static/js/User_Adoption_Center/post/publication_adoption_center.js"></script>
+<script src="/static/js/publication.js"></script>
 {% endblock %}
