--- a/src/templates/publication.html
+++ b/src/templates/publication.html
@@ -1,5 +1,10 @@
 {% extends './lateral_base.html' %}
 
+
+{% block title %}
+Publicar
+{% endblock %}
+
 {% block customCSS%}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{{url_for('static', filename = 'css/publication.css')}}">
