--- a/src/static/css/User_Natural_Person/profile_natural_person.css
+++ b/src/static/css/User_Natural_Person/profile_natural_person.css
@@ -70,5 +70,70 @@ body{
 .container_description{
   width: 100%;
   display: grid;
+  grid-template-rows: min-content max-content;
   border: solid;
+}
+
+.container_boton_label{
+  border: green solid;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container_boton_label h4{
+  font-family: 'Jua', sans-serif;
+  font-weight: 100;
+  font-size: x-large ;
+}
+
+.container_boton_label a{
+  width: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  border: solid;
+}
+
+.container_boton_label a i{
+  font-size: 25px;
+  color: black;
+}
+
+.container_description_textarea{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: solid red;
+}
+
+.container_description_textarea textarea{
+  width: 95%;
+  height: 90%;
+  border-color: black;
+}
+
+
+/* SECCION DE PUBLICACIONES */
+
+.container_publications{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.type_publication{
+  /* border: solid purple; */
+  margin: 1%;
+}
+
+.miniture_publication{
+  display: flex;
+  justify-content: center;
+}
+.miniture_publication img{
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
 }
