--- a/src/templates/lateral_base.html
+++ b/src/templates/lateral_base.html
@@ -76,6 +76,13 @@
               </a>
             </li>
             <li class="item">
+              <a href="/publication_natural_person"
+                class="link flex">
+                <i class="bx bxs-cloud-upload"></i>
+                <span>Publicar</span>
+              </a>
+            </li>
+            <li class="item">
               <a href="/logout" class="link flex">
                 <i class="bx bxs-log-out"></i>
                 <span>Cerrar Sesión</span>
