Commit_061: Correccion de nombre en formulario y agregadas consultas SQL

--- a/src/templates/lateral_base.html
+++ b/src/templates/lateral_base.html
@@ -76,6 +76,12 @@
               </a>
             </li>
             <li class="item">
+              <a href="/home/adoption_center" class="link flex">
+                <i class="bx bxs-home-heart"></i>
+                <span>Inicio</span>
+              </a>
+            </li>
+            <li class="item">
               <a href="/publication_natural_person"
                 class="link flex">
                 <i class="bx bxs-cloud-upload"></i>
