--- a/src/static/css/User_Natural_Person/profile_natural_person.css
+++ b/src/static/css/User_Natural_Person/profile_natural_person.css
@@ -118,22 +118,51 @@ body{
 /* SECCION DE PUBLICACIONES */
 
 .container_publications{
+  border: solid;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .type_publication{
   /* border: solid purple; */
+  border-radius: 5%;
+  /* background-color: #9df2e9; */
   margin: 1%;
 }
 
 .miniture_publication{
   display: flex;
   justify-content: center;
+  padding: 5%;
 }
 .miniture_publication img{
   width: 100%;
-  height: 300px;
+  height: 250px;
   object-fit: cover;
   object-position: center;
+  border-radius: 10%;
+}
+
+.title_publication{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.description_publication{
+  width: 100%;
+  padding: 5%;
+}
+
+.description_publication textarea{
+  width: 100%;
+  height: min-content;
+  resize: none;
+  border: none;
+  background: none;
+  cursor: default; 
+  outline: none;
+  max-height: auto;
+  overflow: auto;
+  font-size: smaller;
 }
