--- a/src/templates/User_Adoption_Center/post/upload_animal.html
+++ b/src/templates/User_Adoption_Center/post/upload_animal.html
@@ -78,7 +78,7 @@ Nuevo animal
         <p>Agrega en esta sección los alimentos que, estrictamente <strong>debe o no</strong> comer el animal</p>
       </div>
       <div class="input_diet">
-        <textarea class="form-control" name="animal_diet" rows="4" placeholder="Agrega aquí observaciones importantes ..."></textarea>
+        <textarea class="form-control" name="animal_observation" rows="4" placeholder="Agrega aquí observaciones importantes ..."></textarea>
       </div>
     </div>
     <!-- Operaciones del animal -->
